[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/EnemyTurret.gd" type="Script" id=1]
[ext_resource path="res://assets/models/TurretWithShield.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sfx/turret_shoot.wav" type="AudioStream" id=3]

[sub_resource type="SphereShape" id=7]
radius = 17.4878

[node name="EnemyTurret" type="Spatial" groups=["clockable"]]
script = ExtResource( 1 )

[node name="TurretWithShield" parent="." instance=ExtResource( 2 )]

[node name="Sphere" parent="TurretWithShield" index="2"]
visible = false

[node name="AgroZone" type="Area" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="AgroZone"]
shape = SubResource( 7 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.6

[node name="ShotSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )

[connection signal="animation_finished" from="TurretWithShield/ShieldAnimator" to="." method="_on_ShieldAnimator_animation_finished"]
[connection signal="body_entered" from="AgroZone" to="." method="_on_AgroZone_body_entered"]

[editable path="TurretWithShield"]
